Implement the backend of edit team